[tool.poetry]
name = "mutationtesting"
version = "0.1.0"
description = ""
authors = ["afeins19 <56986596+afeins19@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
mutpy = "^0.6.1"
pytest = "^7.4.3"
coverage = "^7.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
